--- a/index.html
+++ b/index.html
@@ -88,10 +88,11 @@
     <script src="src/polyfills.bundle.js" charset="utf-8"> </script>
     <script src="src/system.bundle.js" charset="utf-8"> </script>
     <script src="src/import-map.json" type="systemjs-importmap" charset="utf-8"> </script>
+    <script src="index.js" charset="utf-8"> </script>
 
-    <script>
+    <!-- <script>
         System.import('index.js').catch(function (err) { console.error(err); })
-    </script>
+    </script> -->
 
 </body>
 
